# eir

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  vite.config.js
.agents/skills/release-eir/: SKILL.md
.agents/skills/tray-icon-design/: SKILL.md
.claude/skills/release-eir/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: app.js  index.html  styles.css
public/: index.html
src/: App.vue  app.css  app.html  background.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  background.rs  diagnostics.rs  diff.rs  github.rs  lib.rs  main.rs  settings_io.rs  shortcut.rs  snooze.rs  tray.rs  updater.rs
src/components/: PullRequests.vue  Settings.vue
src/github/: index.ts
src/lib/: list.test.ts  list.ts  shortcuts.test.ts  shortcuts.ts  storage.ts  types.ts
src/lib/components/: Auth.svelte  ItemList.svelte  Settings.svelte
src/router/: index.ts
src/routes/: +page.svelte
src/store/: index.ts
src/store/modules/: general.ts  pullRequests.ts
