[package]
name = "eir"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eir_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
octocrab = "0.49.7"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "form"] }
tokio = { version = "1.52.1", features = ["rt", "time"] }
tauri-plugin-notification = "2.3.3"
rustls = { version = "0.23.38", default-features = false, features = ["aws-lc-rs"] }
tauri-plugin-global-shortcut = "2.3.1"

